Create css custom properties

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       }
     </style>
   </head>
-  <body>
-    <main>
+  <body class="bg-neutral-600">
+    <main class="bg-neutral-500 clr-primary-500 fs-400">
       <img src="./images/image-equilibrium.jpg" alt="" />
       <h1><a href="#">Equilibrium #3429</a></h1>
-      <p>Our Equilibrium collection promotes balance and calm.</p>
+      <p class="">Our Equilibrium collection promotes balance and calm.</p>
       <div>
-        <p>
+        <p class="clr-primary-400">
           <i><img src="./images/icon-ethereum.svg" alt="" /></i>0.041 ETH
         </p>
         <p>
