--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
     </style>
   </head>
   <body class="bg-neutral-600">
-    <main class="bg-neutral-500 clr-primary-500 fs-400">
-      <img src="./images/image-equilibrium.jpg" alt="" />
+    <main
+      class="bg-neutral-500 clr-primary-500 fs-400 padding-1 border-radius-2"
+    >
+      <img
+        class="border-radius-1"
+        src="./images/image-equilibrium.jpg"
+        alt=""
+      />
       <h1><a href="#">Equilibrium #3429</a></h1>
       <p class="">Our Equilibrium collection promotes balance and calm.</p>
       <div>
@@ -42,7 +48,7 @@
         </p>
       </div>
       <footer>
-        <img src="./images/image-avatar.png" alt="" />
+        <img class="avatar" src="./images/image-avatar.png" alt="" />
         <p>Creation of <a href="#">Jules Wyvern</a></p>
       </footer>
 
