--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       />
       <h1><a href="#">Equilibrium #3429</a></h1>
       <p class="">Our Equilibrium collection promotes balance and calm.</p>
-      <div>
+      <div class="price">
         <p class="clr-primary-400">
           <i><img src="./images/icon-ethereum.svg" alt="" /></i>0.041 ETH
         </p>
