Add image hover

--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
     <main
       class="bg-neutral-500 clr-primary-500 fs-400 padding-1 border-radius-2"
     >
-      <img
-        class="border-radius-1"
-        src="./images/image-equilibrium.jpg"
-        alt=""
-      />
+      <div class="nft">
+        <img
+          class="border-radius-1"
+          src="./images/image-equilibrium.jpg"
+          alt=""
+        />
+        <div class="hover-img">
+          <img src="./images/icon-view.svg" alt="" />
+        </div>
+      </div>
       <h1><a href="#">Equilibrium #3429</a></h1>
       <p class="">Our Equilibrium collection promotes balance and calm.</p>
       <div class="price">
